[gd_scene load_steps=4 format=3 uid="uid://c01v3icnohflb"]

[ext_resource type="Script" path="res://House.gd" id="1_c4gxq"]
[ext_resource type="PackedScene" uid="uid://bvuf56ajlbbmq" path="res://Galileo.tscn" id="1_fqx6u"]
[ext_resource type="Texture2D" uid="uid://cgk4wyod8i0bw" path="res://icon.svg" id="3_gy2ne"]

[node name="House" type="Node2D"]
script = ExtResource("1_c4gxq")

[node name="Reza" type="Button" parent="."]
offset_left = 295.0
offset_top = 326.0
offset_right = 431.0
offset_bottom = 462.0
focus_mode = 0
icon = ExtResource("3_gy2ne")
flat = true
icon_alignment = 1

[node name="Notebook" type="Button" parent="."]
offset_left = 68.0
offset_top = 424.0
offset_right = 165.0
offset_bottom = 524.0
focus_mode = 0
icon = ExtResource("3_gy2ne")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Scope" type="Button" parent="."]
offset_left = 931.0
offset_top = 338.0
offset_right = 1168.0
offset_bottom = 635.0
focus_mode = 0
icon = ExtResource("3_gy2ne")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Galileo" parent="." instance=ExtResource("1_fqx6u")]
position = Vector2(713, 434)

[connection signal="pressed" from="Reza" to="." method="_on_reza_pressed"]
[connection signal="pressed" from="Notebook" to="." method="_on_notebook_pressed"]
[connection signal="pressed" from="Scope" to="." method="_on_scope_pressed"]
